# geoprior-v3

./: .gitignore  .readthedocs.yml  AGENTS.md  MANIFEST.in  NOTICE  README.md  conftest.py  docs_citation_migration_report.md  environment.yml  pyproject.toml  pytest.ini  unresolved_citations.md
.codex/: config.toml
.github/: copilot-instructions.md
.github/prompts/: migrate-doc-citations.prompt.md
.github/workflows/: python-package-conda.yml
codeocean/: Code_Ocean_README_GeoPrior-v3.md  README.md  postInstall.sh  run.sh
configs/: README.md  nansha.yaml  paper_v3_2.yml  zhongshan.yaml
docs/: geoprior-logo.ai  requirements.txt
docs/source/: _index.rst  conf.py  doc.layout  index.rst  references.bib  references.rst  release_notes.rst  scientific_scope.rst  sg_execution_times.rst
geoprior/: __init__.py  __main__.py  _configs.py  _deps.py  _dummies.py  _geopriorlog.py  _glog.yml  _optdeps.py  _util.py  decorators.py  deps.py  exceptions.py  logging.py  params.py
geoprior/_scripts/: config.py  extend_forecast.py  (+14 more)
nat.com/: add_zsurf_from_coords.py  borehole_pumping_validation_summary.csv  boreholes_nansha.csv  boreholes_zhongshan.csv  boreholes_zhongshan_with_model.csv  classify_boreholes.py  compute_external_validation_metrics_v2.py  config.json  config.py  debug_output_order.py  export_full_city_payload.py  external_validation_fullcity.py  make_full_inputs_npz.py  run_sensitivity.py  run_sm3_regimes_both_50_auto.sh  run_sm3_regimes_tau_50_auto.sh  run_tuner.py  sensitivity.py  sensitivity_lib.py  sm3_collect_summaries.py  sm3_log_offsets_diagnostics.py  sm3_synthetic_identifiability.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
scripts/: __init__.py  __main__.py  build_ablation_table.py  build_model_metrics.py  compute_brier_exceedance.py  compute_hotspots.py  config.py  extend_forecast.py  extend_utils.py  fix_xfer_interval_metrics.py  make_boundary.py  make_district_grid.py  make_exposure.py  plot_ablations_sensitivity.py  plot_core_ablation.py  plot_driver_response.py  plot_external_validation.py  plot_geo_cumulative.py  plot_hotspot_analytics.py  plot_litho_parity.py  plot_physics_fields.py  plot_physics_maps.py  plot_physics_profiles.py  plot_physics_sanity.py  plot_physics_sensitivity.py  plot_sm3_bounds_ridge_summary.py  plot_sm3_identifiability.py  plot_sm3_log_offsets.py  plot_spatial_forecasts.py  plot_transfer.py  plot_uncertainty.py  plot_uncertainty_extras.py  plot_xfer_impact.py  plot_xfer_transferability.py  rebuild_confusion_tables.py  registry.py  summarize_hotspots.py  tag_clusters_with_zones.py  update_ablation_record_posthoc.py  update_ablation_records.py  (+1 more)
tests/: _helpers.py  conftest.py  test_build_ablation_table.py  test_build_add_zsurf_from_coords.py  test_build_assign_boreholes.py  test_build_batch_spatial_sampling.py  test_build_external_validation_fullcity.py  test_build_external_validation_metrics.py  test_build_extract_zones.py  test_build_forecast_ready_sample.py  test_build_full_inputs_npz.py  test_build_model_metrics.py  test_build_physics_payload_npz.py  test_build_spatial_clusters.py  test_build_spatial_roi.py  test_build_spatial_sampling.py  test_compute_brier_exceedance.py  test_compute_hotspots.py  test_extend_forecast.py  test_geoprior_subsnet.py  test_identifiability.py  test_inspect_ablation_record.py  test_inspect_calibration_stats.py  test_inspect_eval_diagnostics.py  test_inspect_eval_physics.py  test_inspect_manifest.py  test_inspect_model_init_manifest.py  test_inspect_physics_payload_meta.py  test_inspect_run_manifest.py  test_inspect_scaling_kwargs.py  test_inspect_stage1_audit.py  test_inspect_stage2_handshake.py  test_inspect_training_summary.py  test_inspect_utils.py  test_inspect_xfer_results.py  test_losses.py  test_losses_additional.py  test_make_boundary.py  test_make_district_grid.py  test_make_exposure.py  (+49 more)
tools/: check_imports.py
(+1048 files in other folders)
