[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoprior-v3"
version = "3.2.0rc1"
description = "Physics-guided AI for geohazards"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Laurent Kouadio", email = "etanoyau@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
  "geohazards",
  "subsidence",
  "physics-informed",
  "forecasting",
  "risk",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.22",
  "pandas>=1.0",
  "scipy>=1.5",
  "matplotlib>=3.3",
  "tqdm>=4.67.1",
  "scikit-learn>=0.24",
  "joblib>=1.5.3",
  "tensorflow>=2.20",
  "keras>=3.0",
  "keras-tuner>=0.1.2", 
  "statsmodels>=0.14.6",
  "PyYAML>=6.0.3",
  "platformdirs>=4.5.1",
  "lz4>=4.4.5",
  "psutil>=4.2.1",
  "seaborn>=0.13.2", 
  "contextily>=1.7.0",
  "geopandas>=1.1.2", 
  "shapely>=2.1.2"
]

[project.urls]
"Website" = "https://geoprior-v3.reathedocs.io"
"Source" = "https://github.com/earthai-tech/geoprior-v3"
"Bug Tracker" = "https://github.com/earthai-tech/geoprior-v3/issues"

[project.scripts]
geoprior = "geoprior.cli:main"
geoprior-run = "geoprior.cli:run_main"
geoprior-build = "geoprior.cli:build_main"
geoprior-plot = "geoprior.cli:plot_main"
geoprior-init = "geoprior.cli.init_config:main"
geoprior-check-imports = "tools.check_imports:main"

[project.optional-dependencies]
kdiagram = ["k-diagram>=1.3.0"]

docs = [
  "sphinx>=7.0",
  "pydata-sphinx-theme>=0.16",
  "sphinx-copybutton",
  "myst-parser",
  "sphinx-design",
  "sphinx-gallery",
  "sphinxcontrib-jsmath",
  "sphinx-mathjax-offline",
  "sphinx-issues",
  "sphinx-prompt",
  "sphinxcontrib-bibtex",
  "numpydoc>=1.6",

]

dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-xdist",
  "pytest-mock",
  "black>=24.0",
  "ruff>=0.4",
  "coverage[toml]>=7.0",
  "requests",
]

[tool.setuptools.packages.find]
include = [
  "geoprior",
  "geoprior.*",
  "scripts",
  "scripts.*",
  "tools"
]
exclude = [
  "tests",
  "tests.*",
  "docs",
  "docs.*",
]

[tool.setuptools.package-data]
geoprior = [
  "_glog.yml",
  "assets/**",
  "schemas/**",
  "resources/**",
]

[tool.pytest.ini_options]
addopts = "-ra --cov=geoprior --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["geoprior"]
branch = true
parallel = true
omit = [
  "geoprior/__init__.py",
  "geoprior/__main__.py",
  "docs/**",
  "examples/**",

  # validated / third-party-like internal code
  "geoprior/core/*",
  "geoprior/metrics/*",
  "geoprior/api/*",
  "geoprior/models/components/*",
  "geoprior/models/utils/pinn.py",
  "geoprior/datasets/*",
  "geoprior/utils/ts_utils.py",
  "geoprior/utils/validator.py",
  "geoprior/utils/generic_utils.py",
  "geoprior/utils/sys_utils.py",
  "geoprior/utils/geo_utils.py",
  
]


[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "def __repr__",
]

[tool.black]
line-length = 62
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 62
target-version = "py310"
fix = true
exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "F401", "E501", "E741", "E722","E731",  "E402", 
    "B007", "B023", "B024", "B904", "B017"
   ]

[tool.ruff.lint.isort]
known-first-party = ["geoprior"]
